--- a/demo/Event/carousel.html
+++ b/demo/Event/carousel.html
@@ -26,7 +26,6 @@
             position: absolute;
             left: 548px;
             bottom: 23px;
-
         }
         #fk ul li{
             list-style: none;
@@ -38,6 +37,52 @@
             border-radius: 50%;
         }
     </style>
+
+    <script type="text/javascript">
+        window.onload = function(){
+            var fk = document.getElementById("fk");
+            var imgs = fk.getElementsByTagName('img');
+            var lis = fk.getElementsByTagName('li');
+
+            var c = 0;
+            function run(){
+                c++;
+                if (c==5) {
+                    c=0;
+                }
+                for (var i=0;i<5;i++) {
+                    lis[i].style.background = 'black';
+                    imgs[i].style.display = "none";
+                }
+                lis[c].style.background = '#A10000';
+                imgs[c].style.display = "block";
+            }
+            var timer = setInterval(run,2000);
+
+            for (var i=0;i<lis.length;i++) {
+                lis[i].order_no = i;
+                lis[i].onmouseover = function(){
+                    c = this.order_no;
+                    clearInterval(timer);
+                    for (var i=0;i<5;i++) {
+                        lis[i].style.background = 'black';
+                        imgs[i].style.display = "none";
+                    }
+                    lis[c].style.background = '#A10000';
+                    imgs[c].style.display = "block";
+                }
+
+                lis[i].onmouseout = function(){
+                    timer = setInterval(run,2000);
+                }
+            }
+
+        }
+
+    </script>
+
+
+
 </head>
 <body>
 
