--- a/demo/sport/floatingads.html
+++ b/demo/sport/floatingads.html
@@ -21,6 +21,7 @@
 
         window.onload = function(){
             var ad = document.getElementById("ad");
+            var close = document.getElementById('close');
 
             var win_height = document.documentElement.clientHeight;
             var win_width = document.documentElement.clientWidth;
@@ -29,7 +30,65 @@
             var max_left = win_width - ad.offsetWidth;
             var x=1,y=1;
 
-            setInterval(function(){
+            function run() {
+                var old_left = ad.offsetLeft;
+                var old_top = ad.offsetTop;
+
+                var new_left = old_left + x;
+                var new_top = old_top + y;
+
+                if (new_top > max_top) {
+                    new_top = max_top;
+                }
+                if (new_left > max_left) {
+                    new_left = max_left;
+                }
+                if (new_left < 0) {
+                    new_left = 0;
+                }
+                if (new_top < 0) {
+                    new_top = 0;
+                }
+                ad.style.left = new_left + 'px';
+                ad.style.top = new_top + 'px';
+
+                if (new_top == max_top) {
+                    y = -5;
+                }
+                if (new_top == 0) {
+                    y = 5;
+                }
+                if (new_left == max_left) {
+                    x = -5;
+                }
+                if (new_left == 0) {
+                    x = 5;
+                }
+
+            }
+                var timer = setInterval(run, 100);
+                ad.onmouseover = function () {
+                    clearInterval(timer);
+                }
+                ad.onmouseout = function () {
+                    timer = setInterval(run, 100);
+                }
+                close.onclick = function () {
+                    ad.style.display = 'none';
+                }
+                window.onresize = function () {
+                    ad.style.left = 0;
+                    ad.style.top = 0;
+                    x = 1;
+                    y = 1;
+                    var win_height = document.documentElement.clientHeight;
+                    var win_width = document.documentElement.clientWidth;
+
+                    max_top = win_height - ad.offsetHeight;
+                    max_left = win_width - ad.offsetLeft;
+                }
+            }
+           /* setInterval(function(){
                 var old_left = ad.offsetLeft;
                 var old_top = ad.offsetTop;
 
@@ -53,9 +112,9 @@
                 if (new_left==0) {
                     x = 1;
                 }
-            },3)
+            },3)*/
 
-        }
+
 
     </script>
 </head>
